<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HotsPotsMgt</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register_">Register_Activity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_data_u">DataUActivity</string>
 <string name="str_img1">Image1</string>
    <string name="str_img2">Image2</string>
    <string name="str_img3">Image3</string>
    <string name="str_img4">Image4</string>
    <string name="str_img5">Image5</string>
    
    <string name="str_btn_start">Start SlideShow</string>
    <string name="str_btn_stop">Stop SlideShow</string>
</resources>